# ho-mfa-application

./: DEPLOYMENT_GUIDE.md  README.md  TESTING_GUIDE.md  cyber-laws-analysis-paper.txt  discussion-forum-unit-8.md  discussion-forum-unit2-peer-feedback.txt  discussion-forum-unit2-peer-responses.txt  discussion-forum-unit2-response.txt  discussion-forum-unit3-kali-tools.txt  discussion-forum-unit3-peer-feedback.txt  discussion-forum-unit3-reply-to-hazem.txt  discussion-forum-unit4-dns-risks.txt  discussion-forum-unit4-peer-responses.txt  discussion-forum-unit5-mobile-security-tool.txt  doctoral-project-implementation-guide.md  doctoral-project-platform-feasibility-analysis.md  doctoral-proposal-ai-music-generation.md  doctoral-to-ho-mfa-enhancement-guide.md  ho-mfa-implementation-guide.md  ho-mfa-modal-implementation-analysis.md  ho-mfa-product-requirements-document.md  ho-mfa-single-platform-implementation-guide.md  ho-mfa-v0-implementation-prompts.md  metasploit-pro-workflow-diagram.mmd  methodology_diagram.mmd  middleware.ts  msit-5910-discussion-forum-unit-1-peer-feedback.txt  msit-5910-discussion-forum-unit-1.md  msit-5910-discussion-forum-unit-2-peer-feedback.txt  msit-5910-discussion-forum-unit-2.md  msit-5910-discussion-forum-unit-3-peer-feedback.md  msit-5910-discussion-forum-unit-3.md  msit-5910-discussion-forum-unit-4-peer-feedback.md  msit-5910-discussion-forum-unit-4.md  msit-5910-discussion-forum-unit-5.md  msit-5910-discussion-unit-2-peer-feedback-responses.txt  msit-5910-identity-verification-unit-4.md  msit-5910-portfolio-activity-unit-1-capstone-proposal.md  (+44 more)
(+115 files in other folders)
