[project]
name = "aura-x-backend"
version = "0.1.0"
description = "Level 5 Autonomous AI Music Generation Platform - Backend"
requires-python = ">=3.11"

dependencies = [
    "temporalio>=1.5.0",
    "modal>=0.63.0",
    "torch>=2.0.0",
    "torchaudio>=2.0.0",
    "audiocraft>=1.0.0",
    "demucs>=4.0.0",
    "librosa>=0.10.0",
    "fastapi>=0.109.0",
    "websockets>=12.0",
    "pydantic>=2.0.0",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]
